[package]
name = "mishti-crypto"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# argon2 = "0.5.1"
bcrypt = "0.10.1"
blake2 = "0.10.6"
k256 = "0.13.4"
num-bigint = { version = "0.4.6", features = ["serde", "rand"] }
rand = "0.8.5"
rand_core = "0.6.4"
getrandom = "0.2.15"
wasm-bindgen = "0.2.99"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
ff = { version = "0.13.0", features = ["derive"] }
num-traits = "0.2.19"
rsa = "0.9.7"
byteorder = "1.5.0"
rand_chacha = "0.3.1"
ethers = "2.0.14"
bincode = "1.3.3"
anyhow = "1.0.95"
dotenv = "0.15.0"
hex = "0.4.3"
futures = "0.3.31"
itertools = "0.11.0"
clap = { version = "4.5.23", features = ["derive"] }
ark-ed-on-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = "0.4.0"
ark-serialize = "0.4.2"
bytemuck = "1.21.0"
lazy_static = "1.5.0"
hmac = "0.12.1"
sha2 = "0.10.8"
sha3 = "0.10.8"
tracing = "0.1.41"
thiserror = "1.0.69"
base64 = "0.22.1"

[features]
testnet_logging = []
enable_credits_for_tests = []
mock_credits = []
